develop login and terms pages

--- a/app/index.html
+++ b/app/index.html
@@ -482,42 +482,44 @@
                     <div class="category__items">
                         <div class="category__item">
                             <div class="category__content">
-                                <h6 class="category__title">Beat Flat Pendant Black</h6>
+                                <h6 class="category__item-title">Beat Flat Pendant Black</h6>
                                 <a class="category__link" href="#">Classic</a>
                             </div>
                             <img class="category__img" src="images/category1.png" alt="category image">
                         </div>
                         <div class="category__item">
                             <div class="category__content">
-                                <h6 class="category__title">Lampe Sur Pieds  Bamboo</h6>
+                                <h6 class="category__item-title">Lampe Sur Pieds Bamboo</h6>
                                 <a class="category__link" href="#">Classic</a>
                             </div>
                             <img class="category__img" src="images/category2.png" alt="category image">
                         </div>
                         <div class="category__item">
                             <div class="category__content">
-                                <h6 class="category__title">Rattan Rocking Chair</h6>
+                                <h6 class="category__item-title">Rattan Rocking Chair</h6>
                                 <a class="category__link" href="#">Classic</a>
                             </div>
-                            <img class="category__img category__img-diff" src="images/category3.png" alt="category image">
+                            <img class="category__img category__img-diff" src="images/category3.png"
+                                alt="category image">
                         </div>
                         <div class="category__item">
                             <div class="category__content">
-                                <h6 class="category__title">Rattan Rocking Chair</h6>
+                                <h6 class="category__item-title">Rattan Rocking Chair</h6>
                                 <a class="category__link" href="#">Classic</a>
                             </div>
                             <img class="category__img" src="images/category4.png" alt="category image">
                         </div>
                         <div class="category__item">
                             <div class="category__content">
-                                <h6 class="category__title">Rattan Rocking Chair</h6>
+                                <h6 class="category__item-title">Rattan Rocking Chair</h6>
                                 <a class="category__link" href="#">Classic</a>
                             </div>
-                            <img class="category__img category__img-diff" src="images/category5.png" alt="category image">
+                            <img class="category__img category__img-diff" src="images/category5.png"
+                                alt="category image">
                         </div>
                         <div class="category__item">
                             <div class="category__content">
-                                <h6 class="category__title">Lampe Sur Pieds  Bamboo</h6>
+                                <h6 class="category__item-title">Lampe Sur Pieds Bamboo</h6>
                                 <a class="category__link" href="#">Classic</a>
                             </div>
                             <img class="category__img" src="images/category6.png" alt="category image">
@@ -526,6 +528,89 @@
                 </div>
             </div>
         </section>
+        <div class="video">
+            <div class="video__bg">
+                <div class="conteiner">
+                    <a class="video__link" data-fancybox="video-gallery" href="https://youtu.be/MAVMyMYtwoU?si=rM2CtntS2-RSrSM4">
+                        <img class="video__img" src="images/playvideo-btn.png" alt="play video button">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <section class="blog">
+            <div class="conteiner">
+                <div class="blog__top">
+                    <h3 class="blog__title title">Our Insights & Articles</h3>
+                    <a class="blog__link" href="#">View All</a>
+                </div>
+                <div class="blog__items">
+                    <div class="blog__item">
+                        <a class="blog__item-imglink" href="#">
+                            <img class="blog__item-img" src="images/blogimg1.png" alt="blog image">
+                        </a>
+                        <div class="blog__item-box">
+                            <a class="blog__item-titlelink" href="#">
+                                <h6 class="blog__item-title">Diusmod tempor incididunt ut labore et dolore magna
+                                    aliqua. Ut enim ad minim veniam</h6>
+                            </a>
+                            <div class="blog__item-info">
+                                <div class="blog__date"> 28 JANUARY, 2020</div>
+                                <a class="blog__author" href="#"> BY ADMIN</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <a class="blog__item-imglink" href="#">
+                            <img class="blog__item-img" src="images/blogimg2.png" alt="blog image">
+                        </a>
+                        <div class="blog__item-box">
+                            <a class="blog__item-titlelink" href="#">
+                                <h6 class="blog__item-title">Diusmod tempor incididunt ut labore et dolore magna
+                                    aliqua. Ut enim ad minim veniam</h6>
+                            </a>
+                            <div class="blog__item-info">
+                                <div class="blog__date"> 28 JANUARY, 2020</div>
+                                <a class="blog__author" href="#"> BY ADMIN</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <a class="blog__item-imglink" href="#">
+                            <img class="blog__item-img" src="images/blogimg3.png" alt="blog image">
+                        </a>
+                        <div class="blog__item-box">
+                            <a class="blog__item-titlelink" href="#">
+                                <h6 class="blog__item-title">Diusmod tempor incididunt ut labore et dolore magna
+                                    aliqua. Ut enim ad minim veniam</h6>
+                            </a>
+                            <div class="blog__item-info">
+                                <div class="blog__date"> 28 JANUARY, 2020</div>
+                                <a class="blog__author" href="#"> BY ADMIN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <ul class="blog__client-list">
+                    <li class="blog__client-item">
+                        <img src="images/client1.png" alt="client logo">
+                    </li>
+                    <li class="blog__client-item">
+                        <img src="images/client2.png" alt="client logo">
+                    </li>
+                    <li class="blog__client-item">
+                        <img src="images/client3.png" alt="client logo">
+                    </li>
+                    <li class="blog__client-item">
+                        <img src="images/client4.png" alt="client logo">
+                    </li>
+                    <li class="blog__client-item">
+                        <img src="images/client5.png" alt="client logo">
+                    </li>
+                </ul>
+            </div>
+            <div class="blog__stripe"></div>
+        </section>
+
     </main>
     <footer class="footer">
         <div class="conteiner">
