added about page

--- a/app/index.html
+++ b/app/index.html
@@ -590,26 +590,31 @@
                         </div>
                     </div>
                 </div>
-                <ul class="blog__client-list">
-                    <li class="blog__client-item">
-                        <img src="images/client1.png" alt="client logo">
-                    </li>
-                    <li class="blog__client-item">
-                        <img src="images/client2.png" alt="client logo">
-                    </li>
-                    <li class="blog__client-item">
-                        <img src="images/client3.png" alt="client logo">
-                    </li>
-                    <li class="blog__client-item">
-                        <img src="images/client4.png" alt="client logo">
-                    </li>
-                    <li class="blog__client-item">
-                        <img src="images/client5.png" alt="client logo">
-                    </li>
-                </ul>
+                <div class="blog__stripe"></div>
+        </section>     
+        <div class="client">
+            <div class="conteiner">
+                <div class="client__inner">
+                    <ul class="client__list">
+                        <li class="client__item">
+                            <img src="images/client1.png" alt="client logo">
+                        </li>
+                        <li class="client__item">
+                            <img src="images/client2.png" alt="client logo">
+                        </li>
+                        <li class="client__item">
+                            <img src="images/client3.png" alt="client logo">
+                        </li>
+                        <li class="client__item">
+                            <img src="images/client4.png" alt="client logo">
+                        </li>
+                        <li class="client__item">
+                            <img src="images/client5.png" alt="client logo">
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="blog__stripe"></div>
-        </section>
+        </div>
 
     </main>
     <footer class="footer">
