--- a/app/login.html
+++ b/app/login.html
@@ -79,7 +79,6 @@
                 </div>
             </div>
         </section>
-
         <section class="modal">
             <div class="content">
                 <form class="modal__form" action="#">
@@ -105,6 +104,27 @@
 
             </div>
         </section>
+        <div class="client">
+            <div class="client__inner">
+                <ul class="client__list">
+                    <li class="client__item">
+                        <img src="images/client1.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client2.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client3.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client4.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client5.png" alt="client logo">
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="conteiner">
