--- a/app/about.html
+++ b/app/about.html
@@ -64,7 +64,7 @@
             <div class="conteiner">
                 <div class="title-box__inner">
                     <h2 class="title-box__title">
-                        Terms & Conditions
+                        About Us
                     </h2>
                     <div class="breadcrumbs">
                         <ul class="breadcrumbs__list">
@@ -72,78 +72,145 @@
                                 <a class="breadcrumbs__link" href="#">Home</a>
                             </li>
                             <li class="breadcrumbs__item">
-                                <a class="breadcrumbs__link" href="#">Terms & Conditions</a>
+                                <a class="breadcrumbs__link" href="#">About Us</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="terms">
+        <section class="about">
             <div class="conteiner">
-                <div class="terms__inner">
-                    <div class="terms__content">
-                        <div class="terms__item">
-                            <h4 class="terms__title">Types of Personal Information We Collect</h4>
-                            <ol class="terms__list">
-                                <li class="terms__text">
-                                    Consectetur adipisicing elit. Minima similique corporis totam dicta unde,
-                                    blanditiis
-                                    consequuntur! Numquam quod reprehenderit, reiciendis sint quia vel dolorem enim
-                                    cumque
-                                    repellendus distinctio asperiores aliquid.
-                                    Culpa eum dolores voluptatibus perspiciatis.
-
-                                </li>
-                                <li class="terms__text">
-                                    Consectetur adipisicing elit. Minima similique corporis totam dicta unde,
-                                    blanditiis
-                                    consequuntur! Numquam quod reprehenderit, reiciendis sint quia vel dolorem enim
-                                    cumque
-                                    repellendus distinctio asperiores aliquid.
-                                    Culpa eum dolores voluptatibus perspiciatis.
-
-                                </li>
-                                <li class="terms__text">
-                                    Consectetur adipisicing elit. Minima similique corporis totam dicta unde,
-                                    blanditiis
-                                    consequuntur!
-                                </li>
-                                <li class="terms__text">
-                                    Consectetur adipisicing elit. Minima similique corporis totam dicta unde,
-                                    blanditiis
-                                    consequuntur! Numquam quod reprehenderit.
-
-                                </li>
-                                <li class="terms__text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, tempore.
-                                </li>
-                            </ol>
+                <div class="about__inner">
+                    <img class="about__img" src="images/about-img.png" alt="title image">
+                    <div class="about__content">
+                        <div class="about__title-conteiner">
+                            <img class="about__year-img" src="images/year.png" alt="number image">
+                            <h3 class="about__num-desc">Years Expirience Working</h3>
                         </div>
-                        <div class="terms__item">
-                            <h4 class="terms__title">How marketpmss.com Collects Personal Infonnation</h4>
-                            <p class="terms__text">Consectetur adipisicing elit. Minima similique corporis totam dicta
-                                unde,
-                                blanditiis consequuntur! Numquam quod reprehenderit, reiciendis sint quia vel dolorem
-                                enim
-                                cumque repellendus distinctio asperiores aliquid.
-                                Culpa eum dolores voluptatibus perspiciatis molestias tempora optio fugit ab odit ipsum
-                            </p>
-                        </div>
-                        <div class="terms__item">
-                            <h4 class="terms__title">How marketprosscom Uses Personal Information</h4>
-                            <p class="terms__text">Consectetur adipisicing elit. Minima similique corporis totam dicta
-                                unde,
-                                blanditiis consequuntur! Numquam quod reprehenderit, reiciendis sint quia vel dolorem
-                                enim
-                                cumque repellendus distinctio asperiores aliquid.
-                                Culpa eum dolores voluptatibus perspiciatis molestias tempora optio fugit ab odit ipsum
-                            </p>
+                        <h2 class="about__title">Mission of our creative house</h2>
+                        <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus possimus
+                            vitae sint recusandae magni cumque officiis tempora inventore adipisci repudiandae. Ducimus
+                            possimus vitae sint recusandae magni cumque officiis tempora inventore adipisci repudiandae.
+                        </p>
+                        <div class="about__num-box">
+                            <h5 class="about__num">520+
+                                <span class="about__num-text">Projects</span>
+                            </h5>
+                            <h5 class="about__num about__num--speaker">$4M
+                                <span class="about__num-text">Revenue</span>
+                            </h5>
+                            <h5 class="about__num about__num--medal">250
+                                <span class="about__num-text">Awards</span>
+                            </h5>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <div class="widgets">
+            <div class="conteinet">
+                <ul class="widgets__list">
+                    <li class="widgets__item">
+                        <img class="widgets__img" src="images/widgets1.png" alt="widget icon">
+                        <h5 class="widgets__num">99%
+                            <span class="widgets__desc">Satisﬁed Clients Rate</span>
+                        </h5>
+                    </li>
+                    <li class="widgets__item">
+                        <img class="widgets__img" src="images/widgets2.png" alt="widget icon">
+                        <h5 class="widgets__num">5020+
+                            <span class="widgets__desc">Products Delivered</span>
+                        </h5>
+                    </li>
+                    <li class="widgets__item">
+                        <img class="widgets__img" src="images/widgets3.png" alt="widget icon">
+                        <h5 class="widgets__num">23hr
+                            <span class="widgets__desc">Daily Working Time</span>
+                        </h5>
+                    </li>
+                    <li class="widgets__item">
+                        <img class="widgets__img" src="images/widgets4.png" alt="widget icon">
+                        <h5 class="widgets__num">140+
+                            <span class="widgets__desc">Brands in Store</span>
+                        </h5>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <section class="team">
+            <div class="conteiner">
+                <div class="team__inner">
+                    <div class="team__content">
+                        <h3 class="team__title">Our Team</h3>
+                        <p class="team__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quod iusto sapiente corrupti enim id laboriosam assumenda explicabo quisquam sint quas nobis, dolore nemo perferendis magnam saepe veniam. Dolorem, nemo.
+                        Aliquid voluptatibus libero quam deleniti dolorum sint, id nihil similique vero illo deserunt incidunt, corporis, illum nam.
+                        </p>
+                        <a class="team__btn" href="#">Join With US</a>
+                    </div>
+                    <div class="team__items">
+                        <div class="team__item">
+                            <img class="team__img" src="images/team-img1.png" alt="team photo">
+                            <div class="team__item-box">
+                                <h5 class="team__name">Eliza Elliot
+                                    <span class="team__position">Commodo tempor</span>
+                                </h5>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img" src="images/icons/instagram.svg" alt="link icon">
+                                </a>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img team__link-img-g" src="images/icons/google-plus.svg" alt="link icon">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="team__item">
+                            <img class="team__img" src="images/team-img2.png" alt="team photo">
+                            <div class="team__item-box">
+                                <h5 class="team__name">Roscoe A.
+                                    <span class="team__position">Commodo tempor</span>
+                                </h5>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img" src="images/icons/instagram.svg" alt="link icon">
+                                </a>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img team__link-img-g" src="images/icons/google-plus.svg" alt="link icon">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="team__item">
+                            <img class="team__img" src="images/team-img3.png" alt="team photo">
+                            <div class="team__item-box">
+                                <h5 class="team__name">Ruby M.
+                                    <span class="team__position">Commodo tempor</span>
+                                </h5>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img" src="images/icons/instagram.svg" alt="link icon">
+                                </a>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img team__link-img-g" src="images/icons/google-plus.svg" alt="link icon">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="team__item">
+                            <img class="team__img" src="images/team-img4.png" alt="team photo">
+                            <div class="team__item-box">
+                                <h5 class="team__name">Marie F. Bloss
+                                    <span class="team__position">Commodo tempor</span>
+                                </h5>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img" src="images/icons/instagram.svg" alt="link icon">
+                                </a>
+                                <a class="team__link" href="#">
+                                    <img class="team__link-img team__link-img-g" src="images/icons/google-plus.svg" alt="link icon">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <section class="blog">
             <div class="conteiner">
                 <div class="blog__top">
@@ -198,28 +265,26 @@
                     </div>
                 </div>
                 <div class="blog__stripe"></div>
-        </section>     
+        </section>
         <div class="client">
-            <div class="conteiner">
-                <div class="client__inner">
-                    <ul class="client__list">
-                        <li class="client__item">
-                            <img src="images/client1.png" alt="client logo">
-                        </li>
-                        <li class="client__item">
-                            <img src="images/client2.png" alt="client logo">
-                        </li>
-                        <li class="client__item">
-                            <img src="images/client3.png" alt="client logo">
-                        </li>
-                        <li class="client__item">
-                            <img src="images/client4.png" alt="client logo">
-                        </li>
-                        <li class="client__item">
-                            <img src="images/client5.png" alt="client logo">
-                        </li>
-                    </ul>
-                </div>
+            <div class="client__inner">
+                <ul class="client__list">
+                    <li class="client__item">
+                        <img src="images/client1.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client2.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client3.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client4.png" alt="client logo">
+                    </li>
+                    <li class="client__item">
+                        <img src="images/client5.png" alt="client logo">
+                    </li>
+                </ul>
             </div>
         </div>
     </main>
