added a new page detalis

--- a/app/product_list2.html
+++ b/app/product_list2.html
@@ -223,7 +223,7 @@
                                     <h4 class="product-item__title">
                                         Wooden radio
                                     </h4>
-                                    <span class="product__star"></span>
+                                    <span class="product__star" data-rateyo-rating="4.5" ></span>
                                     <div class="product-item__price">
                                         23$
                                     </div>
